---------------------------------------------------------------------------------------------------
Version: 0.69.58
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.57
Date: 2025-06-10
  Changes:
    - Krastorio 2 spaced out compatibility. Thanks, Polka!
    - Removed unnecessary global variables for other mods.
    - Infinite quality tiers should no longer horrendously lag the game when mousing over a wind turbine.
---------------------------------------------------------------------------------------------------
Version: 0.69.56
Date: 2025-06-07
  Changes:
    - Made Rocketizer description clearer.
    - Resolved incompatibility with distant-misfires mod. Now that it is working, I can see that it makes Rubia vastly more difficult by making all your guns guzzle ammo. Highly unrecommended, but at least you can.
    - Trashsteroid initial speed +10%.
    - Trashsteroid chunks now slightly more visible (less transparency, bigger size).
    - Craptonite walls buffs.
      ► Craptonite walls now block trashsteroids.
      ► Craptonite wall now immune to poison.
      ► Craptonite wall tech cost 500 => 1000 to compensate.
      ► Craptonite walls no longer make an alert when damaged.
      ► Added info to Tips and Tricks, technology, and entity description. Also added version update message to notify people.
---------------------------------------------------------------------------------------------------
Version: 0.69.55
Date: 2025-06-07
  Changes:
    - Generalized event library to work with space platforms too.
    - Garbo grabbers now too heavy for a rocket, because why would you want them off of Rubia?
  Balancing:
    - Context: I just beat Rubia again, but on the newly added highest difficulty. I'm making a second pass of balance changes. They are mostly small tweaks that should not break anyone's base.
    - Buffs:
      ► Biorecycling Plant recipe time 10 => 6 (+66% speed)