@@ -2,6 +2,7 @@
 Version: 0.69.58
 Date: ????
   Changes:
+    - Lignumis compatibility
 ---------------------------------------------------------------------------------------------------
 Version: 0.69.57
 Date: 2025-06-10
